add game over text; fix some animations bugs.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <p>Points</p>
             <p class="score">0</p>
         </div> -->
+        <img src="./images/game over.png" class="game-over"/>
         <img src="./images/luigi-walking.gif" class="luigi"/>
         <img src="./images/pipe.png" class="pipe"/>
     </div>
