--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
     
     <div class="game-board">
-        <!-- <div class="">
-            <p>Points</p>
+        <div>
             <p class="score">0</p>
-        </div> -->
+            <img src="./images/score.png" class="score-img" />
+        </div>
         <img src="./images/game over.png" class="game-over"/>
         <img src="./images/luigi-walking.gif" class="luigi"/>
         <img src="./images/pipe.png" class="pipe"/>
